--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,13 @@ maintenance = { status = "actively-developed" }
 proc_macro = true
 
 [dependencies]
-syn = { version = "0.12.12", features = ["visit", "extra-traits"] }
-quote = "0.4.2"
+quote = "0.6.8"
+proc-macro2 = "0.4"
+synstructure = "0.9"
+syn = { version = "0.14.9", features = ["visit", "extra-traits"] }
 
 [dev-dependencies]
-slog = { version = "2.1.0", features = ["nested-values"] }
+slog = { version = "2.3.0", features = ["nested-values"] }
 slog-term = "2.3.0"
 serde = "1.0.27"
 serde_derive = "1.0.27"
